--- a/index.html
+++ b/index.html
@@ -51,73 +51,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">Paper-oriented Website Building</h1>
-          <div class="is-size-5 publication-authors">
-            <span class="author-block">
-              <a href="https://keunhong.com">Dingrui</a><sup>1</sup>,</span>
-            <span class="author-block">
-              <a href="https://utkarshsinha.com">Arthor 2</a><sup>2</sup>,</span>
-            <span class="author-block">
-              <a href="https://jonbarron.info">Arthor 3</a><sup>2</sup>,
-          </div>
 
-          <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Technical University of Munich,</span>
-            <span class="author-block"><sup>2</sup>MIRMI</span>
-          </div>
-
-          <div class="column has-text-centered">
-            <div class="publication-links">
-              <!-- PDF Link. -->
-              <span class="link-block">
-                <a href="https://proceedings.neurips.cc/paper_files/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
-                  </span>
-                  <span>Paper</span>
-                </a>
-              </span>
-              <span class="link-block">
-                <a href="https://arxiv.org/pdf/1706.03762"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv</span>
-                </a>
-              </span>
-              <!-- Video Link. -->
-              <span class="link-block">
-                <a href="https://youtu.be/xvFZjo5PgG0?si=GFreULeA1uF8r6fk"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-youtube"></i>
-                  </span>
-                  <span>Video</span>
-                </a>
-              </span>
-              <!-- Code Link. -->
-              <span class="link-block">
-                <a href="https://github.com/TUM-AVS/paper-website-project"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-github"></i>
-                  </span>
-                  <span>Code</span>
-                  </a>
-              </span>
-              <!-- Dataset Link. -->
-              <span class="link-block">
-                <a href="https://github.com/TUM-AVS/paper-website-project"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="far fa-images"></i>
-                  </span>
-                  <span>Data</span>
-                  </a>
-            </div>
-
-          </div>
         </div>
       </div>
     </div>
@@ -144,31 +78,6 @@
   </div>
 </section>
 
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/cat.mp4"
-                type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        An example video to attract people.
-      </h2>
-    </div>
-    <div class="hero-body">
-      <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/video_B.mp4"
-                type="video/mp4">
-      </video>
-        <!-- Video task
-        Check folder ./static/videos, change video_B to something meaningful there.
-        -->
-      <h2 class="subtitle has-text-centered">
-        A task for you: make this video slot show a dog.
-      </h2>
-    </div>
-  </div>
-</section>
 
 
 
@@ -188,61 +97,9 @@
     </div>
     <!--/ Abstract. -->
 
-    <!-- Paper video. -->
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        
-        <h2 class="title is-3">Video</h2>
-        <div class="content has-text-justified">
-          <p>
-            You can add an explanation Youtube video of your paper here!
-          </p>
-        </div>
-        <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/r7jcbH5vq-g?rel=0&amp;showinfo=0"
-                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-    <!--/ Paper video. -->
   </div>
 </section>
 
-<section class="hero is-light">
-    <div class="hero-body">
-      <div class="container is-max-desktop">
-          <div class="item item-video0 has-text-centered">
-            <h3 class="title is-3">Try it for yourself</h3>
-            <video poster="" id="video0" autoplay controls muted loop playsinline center width="70%">
-              <!-- Your video file here -->
-              <source src="static/videos/tryout.mp4"
-              type="video/mp4">
-            </video>
-          </div>
-            <p style="text-align: center;">
-              Check the tutorial about how to start to build paper website for yourself:
-              <i class="fab fa-github"><a class="icon-link" href="https://github.com/TUM-AVS/paper-website-project" class="external-link"></a></i>
-              <a href="https://github.com/TUM-AVS/paper-website-project">Tutorial </a>
-            </p>
-            <br>
-              <center>
-                <code class="column is-three-fifths hero is-dark" style="text-align: left;">
-                  git clone https://github.com/TUM-AVS/paper-website-project.git<br>
-                  cd paper-website-project<br>
-                  etc.<br>
-                  <br>
-                  <br>
-                </code>
-                <br>
-                Other <a href="https://github.com/TUM-AVS/paper-website-project">code</a> instructions:
-                <code class="column is-three-fifths hero is-dark" style="text-align: left;">
-                  etc.<br>
-                </code>
-                <br>
-              </center>
-      </div>
-    </div>
-  </section>
 
 
 
@@ -262,24 +119,11 @@
 
 
 <footer class="footer">
-  <div class="container">
-    <div class="content has-text-centered">
-      <a class="icon-link" href="https://diamond-wm.github.io">
-          <i class="fas fa-home"></i>
-      </a>
-      <a class="icon-link"
-         href="https://arxiv.org/pdf/2405.12399">
-        <i class="fas fa-file-pdf"></i>
-      </a>
-      <a class="icon-link" href="https://github.com/eloialonso/diamond" class="external-link" disabled>
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="content">
           <center><p>
-            This website (<a href="https://github.com/paper-website/paper-website.github.io">source code</a>) was adapted from the popular <a
+            This website source code was adapted from the popular <a
             href="https://nerfies.github.io">Nerfies</a> project page and is licensed under a <br><a rel="license"
             href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
             Commons Attribution-ShareAlike 4.0 International License</a>.
