--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="A short starter to build website for your paper.">
   <meta name="keywords" content="Paper, website">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Paper-oriented Website Building</title>
+  <title>Anonymous Submission</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -50,7 +50,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Paper-oriented Website Building</h1>
+          <h1 class="title is-1 publication-title">Anonymous Submission</h1>
 
         </div>
       </div>
@@ -72,7 +72,7 @@
         </video> 
         -->
       <h2 class="subtitle has-text-centered">
-        An example teaser image with its description.
+        Anonymous submission - details will be provided after review.
       </h2>
     </div>
   </div>
@@ -90,7 +90,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            You can add the abstract of your paper here!
+            This is an anonymous submission for double-blind review. The abstract and detailed information will be available after the review process.
           </p>
         </div>
       </div>
@@ -108,10 +108,10 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{your2024paper,
-  author    = {A, B and C, D and E, F},
-  title     = {Create websites for academic papers},
-  journal   = {A Website Conference},
+    <pre><code>@article{anonymous2024,
+  author    = {Anonymous},
+  title     = {Anonymous Submission},
+  journal   = {Under Review},
   year      = {2024},
 }</code></pre>
   </div>
